--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-trueGray-900 text-trueGray-200">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
